# Image-registration-gui

./: LICENSE  README.md  dataframe_info.csv  exit()  requirements.txt  setup.py  start_gui.py  wing_1.tif  wing_2.tif  wing_3.tif  wing_4.tif
Registration_module/: LICENSE  README.md  pyproject.toml
Registration_module/src/Registration/: TPS.py  __init__.py  snake.py  thinplate.py
Registration_module/src/Registration.egg-info/: PKG-INFO  SOURCES.txt
example_model/: .~lock.lines_model_dataframe.csv#  landmarks_model_dataframe.csv  lines_model_dataframe.csv
image_annotation_gui/: __init__.py  _gui_helpers.py  gui.py
image_annotation_gui.egg-info/: PKG-INFO  requires.txt  top_level.txt
image_registration/: __init__.py
image_registration/CNN/: CNN.py  __init__.py
image_registration/gui/: _gui_helpers.py  gui.py
image_registration/image_processing/: __init__.py  image_processing.py
image_registration/registration/: TPS.py  _TPS_helpers.py  _TPS_helpers_cython.pyx
image_registration_gui/: __init__.py  _gui_helpers.py  gui.py
test_data/: reference.tif
test_data/augmented_data/: 0wing_1.tif  1wing_2.tif  2wing_3.tif  3wing_4.tif  landmarks.csv
test_data/example_project/: .~lock.images_dataframe.csv#  .~lock.landmarks_dataframe.csv#  .~lock.lines_dataframe.csv#  .~lock.model_dataframe.csv#  contour_model_dataframe.csv  images_dataframe.csv  lines_dataframe.csv
test_data/example_registered/: wing_1.tif  wing_2.tif  wing_3.tif  wing_4.tif
