[build-system]
requires = ["Pillow>=9.0.1","numpy>=1.14.2","torch>=0.4.0","torchvision>=0.2.1","opencv-python>=4.5.5","scikit-image>=0.18.3","setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "Registration"
version = "0.0.1"
authors = [
  { name="Titouan Bouinier", email="titouanbouinier@hotmail.fr" },
]
description = "Image registration package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LMU-AgGompel/Image-registration-gui"
"Bug Tracker" = "https://github.com/LMU-AgGompel/Image-registration-gui/issues"

